Tumbler: calculate proper displacement when count <= visibleItemCount

Task-number: QTBUG-53120
Change-Id: I78035b2cf75b2bc18326b7f735be3f9c930d472b
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>